# texted

./: AUTHORS  ChangeLog  Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  index.html  params.json
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: Makefile  Makefile.in
data/icons/: Makefile  (+1 more)
po/: .intltool-merge-cache  Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  about.c  about.h  callback.c  callback.h  dialog.c  dialog.h  dnd.c  dnd.h  emacs.c  emacs.h  encoding.c  encoding.h  file.c  file.h  font.c  font.h  globals.h  gnomeprint.c  gnomeprint.h  gtkprint.c  gtkprint.h  hlight.c  hlight.h  i18n.h  indent.c  indent.h  linenum.c  linenum.h  main.c  menu.c  menu.h  search.c  search.h  selector.c  selector.h  texted  undo.c  (+7 more)
src/.deps/: leafpad-about.Po  leafpad-callback.Po  leafpad-dialog.Po  leafpad-dnd.Po  leafpad-emacs.Po  leafpad-encoding.Po  leafpad-file.Po  leafpad-font.Po  leafpad-gnomeprint.Po  leafpad-gtkprint.Po  leafpad-gtksourceiter.Po  leafpad-hlight.Po  leafpad-indent.Po  leafpad-linenum.Po  leafpad-main.Po  leafpad-menu.Po  leafpad-search.Po  leafpad-selector.Po  leafpad-undo.Po  leafpad-utils.Po  leafpad-view.Po  leafpad-window.Po  texted-about.Po  texted-callback.Po  texted-dialog.Po  texted-dnd.Po  texted-emacs.Po  texted-encoding.Po  texted-file.Po  texted-font.Po  texted-gnomeprint.Po  texted-gtkprint.Po  texted-gtksourceiter.Po  texted-hlight.Po  texted-indent.Po  texted-linenum.Po  texted-main.Po  texted-menu.Po  texted-search.Po  texted-selector.Po  (+4 more)
(+10 files in other folders)
